fixed h1 being too small

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .jumbotron h1 {
-  font-size: 50%;
+  font-size: 150%;
 }
 
 .fa-star, .fa-star-o {
